# onced

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.claude/skills/onced-navigator/: SKILL.md
.claude/skills/verify-gate/: SKILL.md
.github/workflows/: ci.yml  docker.yml  iouring.yml  release.yml
crates/onced-bench/: Cargo.toml
crates/onced-bench/src/: main.rs
crates/onced-core/: Cargo.toml
crates/onced-core/src/: abuse.rs  engine.rs  hash.rs  hll.rs  lib.rs  pow.rs  proptests.rs  replication.rs  sketch.rs  store.rs  velocity.rs  wal.rs
crates/onced-fast/: Cargo.toml
crates/onced-fast/src/: lib.rs  main.rs
crates/onced-fast/tests/: exactly_once.rs  robustness.rs
crates/onced-gateway/: Cargo.toml
crates/onced-gateway/src/: gateway.rs  http.rs  lib.rs  main.rs  router.rs  server.rs
crates/onced-sim/: Cargo.toml
crates/onced-sim/src/: lib.rs  main.rs
crates/onced-uring/: Cargo.toml
crates/onced-uring/src/: main.rs
docs/: TECH_SPEC.md
docs/superpowers/specs/: 2026-06-13-onced-design.md
examples/: demo.sh  stress.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_record.rs  parse_request.rs
