[workspace]
resolver = "2"
members = [
    "crates/onced-core",
    "crates/onced-gateway",
    "crates/onced-sim",
    "crates/onced-bench",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.77"

# Quality / performance defaults for shipped binaries.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
