[workspace]
resolver = "2"
members = [
    "crates/onced-core",
    "crates/onced-gateway",
    "crates/onced-sim",
    "crates/onced-bench",
    "crates/onced-fast",
]
# Excluded crates: the fuzz crate (cargo-fuzz / libFuzzer, nightly-only) and the
# io_uring transport (monoio, Linux-only) — kept out so the normal workspace
# build stays stable-toolchain, cross-platform, and dependency-light.
exclude = ["fuzz", "crates/onced-uring"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.77"

# Quality / performance defaults for shipped binaries.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
