[package]
name = "onced-core"
version = "0.0.0"
description = "Exactly-once effect and abuse-defense core engine: pure, deterministic, storage- and runtime-agnostic."
edition.workspace = true
license.workspace = true

[dependencies]

# Dev-only. proptest (property-based testing with shrinking) does NOT affect the
# zero runtime-dependency guarantee: the shipped library still builds std-only.
[dev-dependencies]
proptest = "1"
