[package]
name = "onced-fast"
version = "0.0.0"
description = "High-performance async transport for Onced: tokio + axum + reqwest, with HTTP keep-alive and a connection-pooled backend client. The zero-dependency core (onced-core) is unchanged underneath."
edition.workspace = true
license.workspace = true

[dependencies]
onced-core = { path = "../onced-core" }
onced-gateway = { path = "../onced-gateway" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "signal"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }

[[bin]]
name = "onced-fast"
path = "src/main.rs"
